jenkins/ingress-rewrite.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-service-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/app-root: /
spec:
  rules:
    - http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
